--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+/* 
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    color: rgb(227, 11, 11);
+    color: rgb(198, 17, 17);
   }
   
   header {
@@ -32,7 +33,7 @@ body {
   
   nav a {
     color: rgb(226, 239, 39);
-    text-decoration: none;
+    text-decoration: blue;
   }
   
   main {
@@ -51,4 +52,685 @@ body {
     text-align: center;
     padding: 20px;
   }
+   */
+   @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+   * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    list-style: none;
+    -webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-font-smoothing:antialiased;
+	-moz-font-smoothing:antialiased;
+	-o-font-smoothing:antialiased;
+	font-smoothing:antialiased;
+	text-rendering:optimizeLegibility;
+  }
+
+  :root{
+    --typewriterSpeed : 5s;
+    --typewriterCharacters: 26; 
+    /* --card-height: 65vh;
+    --card-width: calc(var(--card-height)/1.5); */
+    --background-dark: #2d3548;
+  --text-light: rgba(255,255,255,0.6);
+  --text-lighter: rgba(255,255,255,0.9);
+  --spacing-s: 8px;
+  --spacing-m: 16px;
+  --spacing-l: 24px;
+  --spacing-xl: 32px;
+  --spacing-xxl: 64px;
+  --width-container: 1200px;
+  }
+   
+  body{
+    min-height: 100vh;
+    display: grid;
+  }
+
   
+.logo_pic{
+    width: 150px;
+    cursor: pointer;
+}
+
+header {
+  /* position:fixed; */
+  top:0;
+  right:0;
+  width:100%;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: transparent;
+  padding: 28px 12%;
+  transition: all .50s ease;
+  /* background-color: darkslateblue; */
+}
+
+
+.navbar{
+  display: flex;
+  list-style: none;
+  margin: 0px 20px;
+  gap: 1.5rem;
+  top: 10px;
+  cursor: pointer;
+}
+
+.navbar .navigation{
+  text-decoration: none;
+  color: #333;
+  font-size: 1.1rem;
+  font-weight: 500;
+  padding: 5px 0;
+  margin: 0px 30px;
+  position: relative;
+  
+}
+
+.navbar .navigation::after{
+  content: '';
+  width: 0;
+  height: 4px;
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: hsl(250, 69%, 61%);
+  transition: width 0.3s; 
+}
+
+.navbar .navigation:hover::after{
+  width: 50%;
+} 
+  
+
+  .btn{
+    margin: 20px;
+    width: 130px;
+    height: 55px;
+    color: #fff;
+    border-radius: 5px;
+    padding: 10px 25px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    background: transparent;
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    outline: none;
+    background: rgb(96, 9, 240);
+    background: linear-gradient(0deg, rgba(96, 9, 240,1) 0%, rgba(129, 5, 240, 1) 100%);
+    border: none;
+  }
+
+  .main{
+    display: flex;
+    align-items: center;
+  }
+
+  .content h1{
+    font-size: 60px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    color: transparent;
+    -webkit-text-stroke: 1px #333;
+    background: url(../demo-portfolio/img/back2.png);
+    -webkit-background-clip: text;
+    background-clip: text;
+    background-position: 0 0;
+    animation: back 30s linear infinite;
+}
+@keyframes back{
+    100%{
+        background-position: 2000px 0;
+    }
+}
+
+.content h5{
+  position: relative;
+  width: max-content;
+  font-family: 'Poppins', sans-serif;
+    /* min-height: 100vh; */
+    font-size: 2rem;
+    font-weight: 500;
+  letter-spacing: 0.2rem;
+}
+.content ::before, ::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+h5::before{
+  background: white;
+  animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1.5s forwards;
+}
+ h5::after{
+  background: black;
+  width: 0.5%;
+  animation: typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters))  1.5s forwards, blink 650ms infinite;
+}
+.content h3{
+  opacity: 0;
+  transform: translateY(4rem);
+  animation: fadeInUp 2s ease calc(var(--typewriterSpeed) + 2s) forwards;
+}
+
+@keyframes typewriter {
+  to {
+      left: 100%;
+  }
+}
+
+@keyframes blink {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+@keyframes fadeInUp {
+
+  to {
+      opacity: 1;
+      transform: translateY(0)
+  }
+
+}
+
+.content{
+    margin-left: 10%;
+    margin-top: 2%;
+} 
+
+
+
+.profile{
+  height: 60%;
+  position: absolute;
+  bottom: 130px;
+  right: 150px;
+  z-index: 1;
+}
+
+.flex {
+  height: 60%;
+  position: absolute;
+  top: 30px;
+  bottom: 130px;
+  left: 1000px;
+  background: radial-gradient(#5ddcff, #3c67e3 43%, #4e00c2 1px, transparent 3px) 3px 3px;
+  background-size: 120px 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+@keyframes pulse {
+  0% {
+        box-shadow:
+        0 0 60px 30px #5ddcff,
+        0 0 110px 90px #4e00c2,
+        0 0 160px 120px #3c67e3;
+  }
+  50% {
+      width: 12px;
+      box-shadow: 
+      0 0 60px 30px #5ddcff,
+      0 0 100px 80px #4e00c2, 
+      0 0 140px 100px #3c67e3;
+  }
+  100% {
+        box-shadow:
+        0 0 60px 30px #5ddcff,
+        0 0 110px 90px #4e00c2, 
+        0 0 160px 120px #3c67e3; 
+  }
+}
+
+.orb {
+    animation: pulse 2s infinite ease-in-out;
+    width: 0.5px;
+    height: 0.5px;
+    border-radius: 100%;
+    box-shadow:
+    0 0 60px 30px #5ddcff,
+        0 0 110px 90px #4e00c2, 
+        0 0 160px 120px #3c67e3;
+}
+
+.section {
+  padding: 8rem 0 4rem;
+  align-items: center;
+}
+
+.section__title {
+  font-size: 2.25rem;
+  color: hsl(250, 8%, 15%);
+}
+
+.section__subtitle {
+  display: block;
+  font-size: 1.5rem;
+  margin-bottom: 3rem;
+}
+
+.section__title, 
+.section__subtitle {
+  text-align: center;
+}
+
+/* .about__description{
+  text-align: center;
+  margin-bottom: 2.5rem;
+  padding: 0rem 0rem 0rem 0rem;
+} */
+
+.about__info{
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 1rem;
+}
+
+.about__info-title{
+  font-size: 3rem;
+  font-weight: 600;
+
+}
+.about__info-name{
+  font-size: medium;
+}
+
+.about__info-title, .about__info-name{
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+}
+
+/* .about__button{
+  display: flex;
+  justify-content: center;
+} */
+.section_projects {
+  padding: 3rem 4rem;
+  padding-bottom: 0;
+  text-align: center;
+
+}
+
+.section__title_projects {
+  font-size: 3rem;
+  margin-bottom: 3rem;
+  color: hsl(250, 8%, 15%);
+  text-align: center;
+}
+
+.section__subtitle_projects {
+  display: block;
+  font-size: 1.5rem;
+  margin-top: 5rem;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+
+
+.hero-section{
+  align-items: flex-start;
+  /* background-image: linear-gradient(15deg, #0f4667 0%, #2a6973 150%); */
+  display: flex;
+  min-height: 100%;
+  justify-content: center;
+  padding: var(--spacing-xxl) var(--spacing-l);
+}
+
+.card-grid{
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: var(--spacing-l);
+  grid-row-gap: var(--spacing-l);
+  max-width: var(--width-container);
+  width: 100%;
+}
+
+@media(min-width: 540px){
+  .card-grid{
+    grid-template-columns: repeat(2, 1fr); 
+  }
+}
+
+@media(min-width: 960px){
+  .card-grid{
+    grid-template-columns: repeat(4, 1fr); 
+  }
+}
+
+.card{
+  list-style: none;
+  position: relative;
+}
+
+.card:before{
+  content: '';
+  display: block;
+  padding-bottom: 150%;
+  width: 100%;
+}
+
+.card__background{
+  background-size: cover;
+  background-position: center;
+  /* border-radius: var(--spacing-l); */
+  border-radius: 6px;
+  bottom: 0;
+  filter: brightness(0.75) saturate(1.2) contrast(0.85);
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform-origin: center;
+  transform: scale(1) translateZ(0);
+  transition: 
+    filter 200ms linear,
+    transform 200ms linear;
+}
+
+.card:hover .card__background {
+  transform: scale(1.05) translateZ(0);
+}
+
+.card-grid:hover > .card:not(:hover) .card__background {
+  filter: brightness(0.5) saturate(0) contrast(1.2) blur(20px);
+}
+
+.card__content{
+  left: 0;
+  padding: var(--spacing-l);
+  position: absolute;
+  top: 0;
+}
+
+.card__category{
+  color: white;
+  font-size: 0.9rem;
+  margin-bottom: var(--spacing-s);
+  text-transform: uppercase;
+}
+
+.card__heading{
+  color: white;
+  font-size: 2.2rem;
+  text-shadow: 2px 2px 20px rgba(0,0,0,0.2);
+  line-height: 1.4;
+  word-spacing: 100vw;
+}
+
+.project_summary{
+  margin-top: 70px;
+  margin-bottom: 0px;
+  position: relative;
+  padding: 0.5rem 0.5rem;
+  /* background: whitesmoke; */
+  flex: 1; 
+ border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
+}
+.project_title{
+  margin-bottom: 5px;
+  padding-top: 15px;
+  color: white
+}
+.created_date{
+  margin: 10px 0;
+  color: white
+}
+.project_desc{
+  margin: 0;
+  font-weight: 300;
+  width: 100%;
+  color: white
+}
+
+.contact {
+	max-width:400px;
+	width:100%;
+	margin: auto;
+	position:relative;
+}
+
+#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px 'Poppins', Helvetica, Arial, sans-serif; }
+
+#contact {
+	background:#F9F9F9;
+	padding:25px;
+  padding-top: 0.1px;
+	margin:10px 0;
+  /* width: 50%; */
+  margin-right: 50px;
+}
+
+#contact h3 {
+	color: hsl(250, 69%, 61%);
+	display: block;
+	font-size: 30px;
+	font-weight: 400;
+}
+
+#contact h4 {
+	margin:5px 0 15px;
+	display:block;
+	font-size:13px;
+}
+
+fieldset {
+	border: medium none ;
+	margin: 0 0 10px;
+	min-width: 100%;
+	padding: 0;
+	width: 100%;
+}
+
+#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
+	width:100%;
+	border:1px solid #CCC;
+	background:#FFF;
+	margin:0 0 5px;
+	padding:10px;
+}
+
+#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
+	-webkit-transition:border-color 0.3s ease-in-out;
+	-moz-transition:border-color 0.3s ease-in-out;
+	transition:border-color 0.3s ease-in-out;
+	border:1px solid #AAA;
+}
+
+#contact textarea {
+	height:100px;
+	max-width:100%;
+  resize:none;
+}
+
+#contact button[type="submit"] {
+	cursor:pointer;
+	width:100%;
+	border:none;
+	background:hsl(250, 69%, 61%);
+	color:#FFF;
+	margin:0 0 5px;
+	padding:10px;
+	font-size:15px;
+}
+
+#contact button[type="submit"]:hover {
+	background:hsl(250, 69%, 61%);
+	-webkit-transition: background 0.3s ease-in-out;
+	-moz-transition: background 0.3s ease-in-out;
+	transition:background-color 0.3s ease-in-out;
+}
+
+#contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
+
+/* #contact input:focus, #contact textarea:focus {
+	outline:0;
+	border:1px solid #999;
+} */
+::-webkit-input-placeholder {
+ color:#888;
+}
+:-moz-placeholder {
+ color:#888;
+}
+::-moz-placeholder {
+ color:#888;
+}
+:-ms-input-placeholder {
+ color:#888;
+}
+
+/* .contain{
+  width: 50px;
+  height: 50px;
+  position: relative ; 
+  perspective: 800px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+}
+
+.card1{
+  width: 50%;
+  height: 50%;
+  position: absolute;
+  border-radius: 6px;
+  box-shadow: 0 6px 16px rgba(0,0,0,0.15);
+}
+  
+
+  .front{
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  } */
+/* .video_h1{
+  text-align: center;
+  color: #4e00c2;
+}
+  .wrapper{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+}
+.card1{
+   min-width: 600px;
+    min-height: 250px;
+    background-image: url(../demo-portfolio/img/video.png);
+    padding: 30px;
+     border-radius: 3px;
+    box-sizing: border-box;
+    color: #FFF;
+    margin:20px;
+     box-shadow: rgb(50 50 93 / 25%) 0px 30px 60px -12px, rgb(0 0 0 / 30%) 0px 18px 36px -18px;
+}
+.card-title{
+  margin-top: 0;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 1.2px;
+}
+.card-content{
+  font-size: 14px;
+  letter-spacing: 0.5px;
+  line-height: 1.5;
+}
+.card-btn{
+  all: unset;
+  display: block;
+  text-align: center;
+  margin-left: auto;
+  border: 2px solid #FFF;
+  padding: 10px 15px;
+  border-radius: 25px;
+  font-size: 10px;
+  font-weight: 600;
+  transition: all 0.5s;
+  font-size: 3rem;
+  font-weight: 600;
+  cursor: pointer;
+  letter-spacing: 1.2px;
+  justify-content: center;
+} */
+footer{
+  background: black;
+  display: flex;
+  justify-content: center;
+}
+
+footer p{
+  color: white;
+  margin-top: 25px;
+  padding-right: 50px;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+.fa-pinterest {
+  background: #cb2027;
+  color: white;}
